# tictac-ai

./: .gitignore  .gitlab-ci.yml  .releaserc  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  minmax.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql_analysis.yml  dangerci.yml  lint_test_build.yml  pypy_upload.yml  release.yml
.gitlab/: .gitlab-webide.yml
.gitlab/merge_request_templates/: base.md
clients/: play.py
clients/browser/: cli.py  index.html  players.py  renderers.py  script.py  tictacai-0.1.0-py3-none-any.whl
clients/console/: args.py  cli.py  players.py  renderers.py
clients/window/: cli.py  players.py  renderers.py
tictacai/: pyproject.toml
tictacai/tests/logic/: test_game_state.py  test_grid.py  test_mark.py  test_models.py
tictacai/tictacai/game/: engine.py  engine_async.py  players.py  players_async.py  renderers.py
tictacai/tictacai/logic/: exceptions.py  minimax.json  minimax.py  models.py  validators.py
